Bug 1687118 - Bail early from DocumentL10n::TriggerInitialTranslation if mReady is not available. r=emilio,nordzilla

Differential Revision: https://phabricator.services.mozilla.com/D131253